update jvm arguements